[package]
name = "cas"
version = "0.1.0"
edition = "2024"

[lib]
name = "cas"
crate-type = ["cdylib", "rlib"]

[dependencies]
rug = "1"
derive_more = { version = "2", features = ["display"] }
delegate = "0.13"
num-bigint = "*"
pyo3 = { version = "0.26", features = ["num-bigint"] }

[dev-dependencies]